mlserver/huggingface/flan-t5-small/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: flan-t5-small-mlserver
  labels:
    serving.kserve.io/inferenceservice: flan-t5-small-mlserver
spec:
  to:
    kind: Service
    name: flan-t5-small-mlserver-http
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
